apps/base/headlamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  labels:
    app.kubernetes.io/name: headlamp
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headlamp
    spec:
      serviceAccountName: headlamp
      automountServiceAccountToken: true
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      securityContext:
        runAsUser: 100
        runAsGroup: 101
        fsGroup: 101
        runAsNonRoot: true
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:v0.26.0
          imagePullPolicy: IfNotPresent
          args:
            - --in-cluster
            - --port=4466
          ports:
            - name: http
              containerPort: 4466
              protocol: TCP
          resources:
            requests:
              cpu: "25m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: 4466
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 4466
            initialDelaySeconds: 10
            periodSeconds: 10
